--- a/style.css
+++ b/style.css
@@ -9883,4 +9883,45 @@ h3 {
   background-size: cover;
 }
 
+
+
+
+
+
+/* Telefones em paisagem e abaixo */
+@media (max-width: 479px) { 
+  .logo img {
+    height: 40px;
+  }
+}
+
+/* Telefones em paisagem a tablet em retrato */
+@media (min-width: 480px) and (max-width: 767px) {
+  .logo img {
+    height: 60px;
+  }
+}
+
+/* Tablet em retrato a paisagem e desktop */
+@media (min-width: 768px) and (max-width: 1199px) {
+  .logo img {
+    height: 80px;
+  }
+}
+
+/* Desktop normais */
+@media (min-width: 1200px) and (max-width: 1499px){
+  .logo img {
+    height: 100px;
+  }
+}
+
+/* Desktop grande */
+@media (min-width: 1500px) {
+  .logo img {
+    height: 100px;
+  }
+}
+
+
 /*# sourceMappingURL=style.css.map */
