--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
 }
 
 html {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -55,7 +55,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Merienda", cursive;
+  font-family: 'Roboto', sans-serif;;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -3855,6 +3855,7 @@ input[type=button].btn-block {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
+  font-family: 'Merienda', cursive;
 }
 .nav-link:hover, .nav-link:focus {
   text-decoration: none;
@@ -9875,6 +9876,9 @@ h3 {
     border-color: #dee2e6;
   }
 }
+
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! CSS PERSONALIZADO !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+
 .banner {
   background-image: url("images/banner.jpg");
   height: 400px;
@@ -9883,10 +9887,30 @@ h3 {
   background-size: cover;
 }
 
+.footer-items {
+  font-family: 'Merienda', cursive;
+  margin: 0;
+  padding: 10px;
+  font-weight: 400;
+}
 
 
+.footer-items-border {
+    height: 2px;
+    width: 40px;
+    margin: 12px 0 5px 0;
+    background-color: #ff9800;
+}
 
+.footer-items ul a {
+  display: block;
+}
 
+.footer-items h5 {
+  color: #ff9800;
+}
+
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! MEDIA QUERY !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 
 /* Telefones em paisagem e abaixo */
 @media (max-width: 479px) { 
