--- a/style.scss
+++ b/style.scss
@@ -7,12 +7,14 @@ $theme-colors: (
 $text-primary: #D97E4A;
 $text-secondary: #0e2b3a;
 
-$font-family: 'Merienda', cursive;
-$font-family-sans-serif: 'Merienda', cursive;
-$font-family-monospace: 'Merienda', cursive; 
+// $font-family: 'Merienda', cursive; TIRARRRRRRRRRRRRRRRRRRRRR VER ABAIXO
+// $font-family-sans-serif: 'Merienda', cursive;TIRARRRRRRRRRRRRRRRRRRRRR VER ABAIXO
+// $font-family-monospace: 'Merienda', cursive;  TIRARRRRRRRRRRRRRRRRRRRRR VER ABAIXO
 
 @import "node_modules/bootstrap/scss/bootstrap";
 
+
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! CSS PERSONALIZADO !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 
 .banner {
     background-image: url("images/banner.jpg");
@@ -20,5 +22,58 @@ $font-family-monospace: 'Merienda', cursive;
     width: 100%;
     background-position: center;
     background-size: cover;
-}
+  }
+  
+  
+  /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! MEDIA QUERY !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+  
+  /* Telefones em paisagem e abaixo */
+  @media (max-width: 479px) { 
+    .logo img {
+      height: 40px;
+    }
+  }
+  
+  /* Telefones em paisagem a tablet em retrato */
+  @media (min-width: 480px) and (max-width: 767px) {
+    .logo img {
+      height: 60px;
+    }
+  }
+  
+  /* Tablet em retrato a paisagem e desktop */
+  @media (min-width: 768px) and (max-width: 1199px) {
+    .logo img {
+      height: 80px;
+    }
+  }
+  
+  /* Desktop normais */
+  @media (min-width: 1200px) and (max-width: 1499px){
+    .logo img {
+      height: 100px;
+    }
+  }
+  
+  /* Desktop grande */
+  @media (min-width: 1500px) {
+    .logo img {
+      height: 100px;
+    }
+  }
 
+
+MUDAR NA MÃO
+  .nav-link {
+    display: block;
+    padding: 0.5rem 1rem;
+    font-family: 'Merienda', cursive;
+  }
+  
+  body {
+    font-family: 'Roboto', sans-serif;
+  }
+
+  html {
+    font-family: 'Roboto', sans-serif;
+  }
