--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #0e2b3a;
+  --primary: #2c355c;
   --secondary: #D97E4A;
   --success: #28a745;
   --info: #17a2b8;
@@ -158,7 +158,7 @@ a {
 }
 a:hover {
   color: black;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 a:not([href]) {
@@ -2430,18 +2430,18 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #0e2b3a;
-  border-color: #0e2b3a;
+  background-color: #2c355c;
+  border-color: #2c355c;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #07141b;
-  border-color: #040d11;
+  background-color: #5b69b1;
+  border-color: #2c355c;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #07141b;
-  border-color: #040d11;
+  background-color: #2c355c;
+  border-color: #2c355c;
   box-shadow: 0 0 0 0.2rem rgba(50, 75, 88, 0.5);
 }
 .btn-primary.disabled, .btn-primary:disabled {
@@ -2451,7 +2451,7 @@ fieldset:disabled a.btn {
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #040d11;
+  background-color: #5b69b1;
   border-color: #020507;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
@@ -3855,7 +3855,7 @@ input[type=button].btn-block {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  font-family: 'Merienda', cursive;
+  font-family: 'Merienda One', cursive;
 }
 .nav-link:hover, .nav-link:focus {
   text-decoration: none;
@@ -9678,7 +9678,8 @@ button.bg-dark:focus {
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: black !important;
+  color: #5b69b1 !important;
+  text-decoration: none;
 }
 
 .text-secondary {
@@ -9879,6 +9880,60 @@ h3 {
 
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! CSS PERSONALIZADO !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 
+
+/* TOPO */
+.topo {
+  height:40px;
+  background-color:#2c355c
+ }
+.topo ul.social-menu-top {
+  list-style:none;
+  text-align:right;
+  padding:5px 0 0 0!important;
+  margin:0!important
+ }
+.topo ul.social-menu-top li {
+  font-size:20px;
+  padding:20px 10px 0 0;
+  display:inline;
+ }
+.topo ul.social-menu-top li a {
+  display:inline-block;
+  color:#bdc9ff;
+  text-shadow:1px 1px #132da1
+ }
+.topo ul.social-menu-top li a:hover {
+  color:#4059c7;
+  text-shadow:1px 1px #bdc9ff
+ }
+ 
+
+
+ /* LOGO */
+.logo {
+  display: flex;
+}
+
+.logo_link {
+  display: flex;
+  align-items: baseline;
+}
+
+.logo_p {
+  font-family: 'Lobster', cursive;
+  color: #2c355c;
+  font-size: 2.5rem;
+  margin: 0;
+}
+
+
+/* NAVBAR */
+.minha_nav{
+  border-bottom: solid 1px #2c355c;
+}
+
+
+/* BANNER */
 .banner {
   background-image: url("images/banner.jpg");
   height: 400px;
@@ -9888,12 +9943,11 @@ h3 {
 }
 
 
-
-/* FOOTER SHAW */
+/* FOOTER */
 
 .footer{
   width: 100%;
-  background: #041f2c;
+  background: #2c355c;
   display: block;
   font-size: 18px;
   font-family: 'Merienda One', cursive;
@@ -9913,8 +9967,14 @@ h3 {
 
 .footer-h1{
   padding: 10px 0;
-  font-size: 25px;
   color: white;
+  font-family: 'Lobster', cursive;
+  font-size: 2.5rem;
+  margin: 0;
+}
+
+.footer-h1:hover{
+  color: orange;
 }
 
 .footer-h2{
@@ -9935,6 +9995,11 @@ h3 {
   height: 2px;
   width: 40px;
   background: #ff9800;
+}
+
+.footer-items{
+  padding: 10px 20px;
+  box-sizing: border-box;
 }
 
 .footer-items ul{
@@ -9967,46 +10032,40 @@ h3 {
   margin-right: 20px;
 }
 
-.social-media{
-  width: 100%;
-  color: white;
-  text-align: left;
-}
-
-.social-media a{
-  text-decoration: none;
-}
-
-.social-media i{
-  height: 37px;
-  width: 37px;
-  margin: 20px 5px;
-  padding: 10px;
-  color: white;
-  border-radius: 50%;
-  border: 1px solid grey;
-  transition: 0.3s;
-}
-
-.social-media i:hover{
-  background: grey;
-}
 
 .footer-bottom{
   padding: 10px;
-  background: #3d545f;
+  width: 100%;
+  margin: 0;
+  background: #4e567c;
   color: white;
+  font-size: 12px;
+  text-align: center;
+}
+
+.button-cadastro{
+  background:linear-gradient(to top, #4e567c 5%, #636fa8 100%);
+  border: solid 1px #4e567c;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  padding: 2px 10px;
+  color: white;
+  box-shadow: 1px 1px 1px rgba(0,0,0,0.25);
+}
+
+.button-cadastro:hover {
+  background:linear-gradient(to top, #636fa8 5%, #4e567c 100%);
+}
+
+.privacidade {
   font-size: 12px;
 }
 
-
-
-
-/* ver query */
-.footer-items{
-  width: 25%;
-  padding: 10px 20px;
-  box-sizing: border-box;
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! MEDIA QUERY DO FOOTER !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+@media screen and (min-width:1086px) {
+  .footer-items {
+      width: 25%;
+  }
 }
 
 @media screen and (max-width:1085px) {
@@ -10017,10 +10076,9 @@ h3 {
 
 @media screen and (max-width:600px) {
   .footer-items {
-      width: 10 0%;
+      width: 100%;
   }
 }
-
 
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! MEDIA QUERY !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 
@@ -10028,6 +10086,10 @@ h3 {
 @media (max-width: 479px) { 
   .logo img {
     height: 40px;
+  }
+
+  .logo_p {
+    font-size: 1.5rem;   
   }
 }
 
