--- a/style.css
+++ b/style.css
@@ -959,12 +959,28 @@ pre code {
     max-width: 1140px;
   }
 }
+
+/* cat dog icons */
+
+.imagedog{
+  position: relative;
+  left: 61%;
+}
+
+.imagecat{
+  position: absolute;
+  right: 61%;
+  top: 32%;
+}
+
+
+
 .row {
   display: flex;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+  
 }
+
+
 
 .no-gutters {
   margin-right: 0;
@@ -6425,7 +6441,7 @@ button.bg-danger:focus {
 }
 
 .bg-light {
-  background-color: #f8f9fa !important;
+  background-color: white !important;
 }
 
 a.bg-light:hover, a.bg-light:focus,
