--- a/style.css
+++ b/style.css
@@ -173,6 +173,46 @@
 }
 
 
+/* our team */
+.ourteam{
+  background: #f5f5f5;
+  margin: 40px;
+  
+  
+  
+}
+
+.ourteam_wrapper .team{
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
+
+
+.ourteam_wrapper .team_member{
+  width: 30%;
+  height: auto;
+  cursor: pointer;
+  /* we put dis so transform scale(1.1) so animation will be smooth on the pictures OUR TEAM */
+  overflow: hidden; 
+  
+}
+
+.ourteam_wrapper .team_member img{
+  width: 100%;
+  display: block;
+  height: auto;
+  transition: all 0.5s ease;
+  
+}
+
+.ourteam_wrapper .team_member:hover img{
+  transform: scale(1.1);
+}
+
+
 /* FOOTER */
 
 .footer{
