--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
 @charset "UTF-8";
 
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! CSS PERSONALIZADO !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+
+/* GERAL */
+
+* {
+  box-sizing: border-box;
+  position: relative;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
 /* TOPO */
 .topo {
   height:40px;
@@ -62,20 +75,11 @@
   background-size: cover;
 }
 
+
+/* MAIN GERAL */
+
 .main{
-  display: flex;  
-}
-
-.aside {
-  background-color: aqua;
-  width: 25%;
-  height: 100px;
-}
-
-.main-section{
-  background-color: brown;
-  width: 75%;
-  height: 100px;
+  display: flex;
 }
 
 
@@ -134,6 +138,8 @@
 	resize: none;
 	border: 1px solid  #ccc;
 }
+
+
 /* our team */
 .ourteam{
 	background: #f5f5f5;
@@ -177,18 +183,12 @@
 .ourteam{
   background: #f5f5f5;
   margin: 40px;
-  
-  
-  
 }
 
 .ourteam_wrapper .team{
   display: flex;
   justify-content: space-between;
 }
-
-
-
 
 
 .ourteam_wrapper .team_member{
@@ -284,8 +284,6 @@
   display: block;
 }
 
-
-
 .footer-items ul li a{
   text-decoration: none;
   outline: none;
@@ -301,7 +299,6 @@
 .footer-items ul li i{
   margin-right: 20px;
 }
-
 
 .footer-bottom{
   padding: 10px;  
@@ -331,11 +328,15 @@
   font-size: 12px;
 }
 
+
 /*CSS PAGINA PERDIDOS E ACHADOS*/
 
 .icones{
   margin-top: 20px;
-  margin-bottom: 20px;  
+  margin-bottom: 20px;
+  width: 100%;
+  display: flex; 
+  justify-content: center;
 }
 .card{
   cursor: pointer;
@@ -348,6 +349,56 @@
 .card:hover{
   transition: all 0.4s ease;
   transform: scale(1.1);
+}
+
+/* ÍCONES DOG CAT */
+
+.imagedog,
+.imagecat {
+  margin: 0 50px;
+}
+
+
+
+/* CSS DO ADOTE */
+
+aside {
+  width: 300px;
+  margin: 20px 0 20px 10px;
+  border-right: solid 1px #ccc;
+}
+
+.main-section{
+  margin: auto;
+}
+
+.estados,
+.cidades,
+.tamanho,
+.porte, 
+.sexo,
+.idade {
+  border-bottom: solid 1px #ccc;
+  margin-right: 20px;
+  margin-left: 10px;
+  padding: 0 0 20px 0;
+}
+
+.cidades,
+.tamanho,
+.porte, 
+.sexo,
+.idade {
+  padding-top: 10px;
+}
+
+
+aside select {
+  width: 100%;
+}
+
+aside select option {
+  padding: 5px;
 }
 
 
@@ -1000,27 +1051,14 @@ pre code {
   }
 }
 
-/* cat dog icons */
-
-.imagedog{
-  position: relative;
-  left: 61%;
-}
-
-.imagecat{
-  position: absolute;
-  right: 61%;
-  top: 32%;
-}
-
-
-
 .row {
+  display: -ms-flexbox;
   display: flex;
-  
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
 }
-
-
 
 .no-gutters {
   margin-right: 0;
