--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2517,6 +2517,7 @@ pre code {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
+  left: auto;
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
