--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,7 +140,9 @@ body {
     text-decoration: none;
     text-shadow: 1px 1px 1px #000;
 }
-
+.comment{
+  width: 200px;
+}
 
 /* About */
 .sobrenos,
