destroy registro pet funcionando

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,6 +144,12 @@ body {
   width: 200px;
 }
 
+.btn-delete{
+  text-align: center;
+    
+  margin: 20px 0;
+}
+
 /* About */
 .sobrenos,
 .servicos,
