--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,7 +128,10 @@ body {
   top: 0.5em;
 }
 
-
+.corner_show{
+  margin-top: 0.3rem;
+  margin-left: 0.5rem;
+}
 
 .corner span {
     color: #fff;
@@ -140,13 +143,13 @@ body {
     text-decoration: none;
     text-shadow: 1px 1px 1px #000;
 }
+
 .comment{
   width: 200px;
 }
 
 .btn-delete{
   text-align: center;
-    
   margin: 20px 0;
 }
 
