comecei update. Ainda não funciona

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,9 +148,10 @@ body {
   width: 200px;
 }
 
-.btn-delete{
-  text-align: center;
-  margin: 20px 0;
+.btn-show{
+  display: flex;
+  /* justify-content: center; */
+
 }
 
 /* About */
