--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,7 +145,7 @@ body {
     text-shadow: 1px 1px 1px #000;
 }
 
-/* Forulário */
+/* Formulário cadastro pet*/
 .form-cadastro{
   max-width: 600px;
   border: solid 1px gray;
@@ -201,11 +201,58 @@ body {
 }
 
 /* Comentários */
-.comment{
-  width: 200px;
+
+.comentarios{
+  margin-bottom: 20px;
+}
+  
+.form-comment{
+  display: flex !important;
+  align-items: center;
+  padding: 5px;
+  margin: 5px;
+  height: 60px;
+  border-radius: 0;
+}
+
+.avatar-comment{
+  width: 50px;
+  height: 60px;
+  padding: 0;
+  margin-right: 14px;
+  margin-top: 14px;
+  border-radius: 5px;
+  overflow: hidden;
+  object-fit: cover;
+
+
+}
+
+.avatar-comment img {
+  border-radius: 5px;
+  opacity: 80%;
 }
 
 
+.input-group{
+  display: flex;
+  width: 100%;
+}
+
+.comment-btn{
+  height: 38px;
+  border-radius: 0 !important;
+}
+
+.show-comment{
+  display: flex;
+}
+
+.comment-nome{
+  color: coral;
+  font-weight: bolder;
+  margin-bottom: 2px;
+}
 
 
 
